--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Circus Starter plus the start of the html needed for the Check In project",
   "main": "gulpfile.js",
-  "dependencies": {},
+  "dependencies": {
+    "blueimp-md5": "^2.10.0",
+    "md5": "^2.2.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
